--- a/index.html
+++ b/index.html
@@ -46,17 +46,29 @@
   <!-- Section 2-->
   <div class="section-2">
     <!-- Title section -->
-    <div>
-
-    </div>
+    <h1 class="information-header-text">
+      Some random information.
+    </h1>
 
     <!-- Cards flex container-->
-    <div>
+    <div class="cards-container">
       <!-- Cards items -->
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+      <div class="card-item">
+        <div class="square-card"></div>
+        <div class="card-text">this is some subtext under an illustration or image</div>
+      </div>
+      <div class="card-item">
+        <div class="square-card"></div>
+        <div class="card-text">this is some subtext under an illustration or image</div>
+      </div>
+      <div class="card-item">
+        <div class="square-card"></div>
+        <div class="card-text">this is some subtext under an illustration or image</div>
+      </div>
+      <div class="card-item">
+        <div class="square-card"></div>
+        <div class="card-text">this is some subtext under an illustration or image</div>
+      </div>
     </div>
   </div>
 
