--- a/index.html
+++ b/index.html
@@ -74,7 +74,11 @@
 
   <!-- Section 3-->
   <div class="section-3">
-
+    <div class="quote-container">
+    <!-- Quote text -->
+      <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. &nbsp;Maybe it's just filling up the space, or maybe people will actually read it. Who knows? All I know <br>is that it looks nice.</div>
+      <div class="quote-author">- Thor, God of Thunder</div>
+    </div>
   </div>
 
   <!-- Section 4 -->
