--- a/index.html
+++ b/index.html
@@ -1,94 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project: Landing Page (Foundation course)</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <!-- This project has four main sections with a footer: -->
-  <!-- 1. Header-Hero section -->
-  <!-- 2. Information section -->
-  <!-- 3. Quote section -->
-  <!-- 4. Call to action banner section -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Project: Landing Page (Foundation course)</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!-- This project has four main sections with a footer: -->
+    <!-- 1. Header-Hero section -->
+    <!-- 2. Information section -->
+    <!-- 3. Quote section -->
+    <!-- 4. Call to action banner section -->
 
-  <!-- Section 1 -->
-  <div class="section-1">
-    <header>
-      <h2>Header Logo</h2>
+    <!-- Section 1 -->
+    <div class="section-1">
+      <header>
+        <h2>Header Logo</h2>
+        
+        <!-- Header navbar -->
+        <nav>
+          <ul>
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
+          </ul>
+        </nav>
+      </header>
 
-      <nav>
-        <ul>
-          <li><a href="#">header link one</a></li>
-          <li><a href="#">header link two</a></li>
-          <li><a href="#">header link three</a></li>
-        </ul>
-      </nav>
-    </header>
+      <div class="hero-container">
+        <!-- Hero text container-->
+        <div class="hero-text-container">
+          <h1 class="hero-main-text">This website is awesome</h1>
+          <p class="hero-secondary-text">
+            This website has some subtext that goes here under the main title.
+            &nbsp; It's a smaller font and the color is lower contrast
+          </p>
+          <button class="hero button" type="button">Sign up</button> <!-- First 'Sign up' button -->
+        </div>
 
-    <div class="hero-container">
-      <!-- Hero text container-->
-      <div class="hero-text-container">
-        <h1 class="hero-main-text">This website is awesome</h1>
-        <p class="hero-secondary-text">This website has some subtext that goes here under the main title. &nbsp; It's a smaller font and the color is lower contrast</p>
-        <button class="hero-button" type="button">Sign up</button>
-
-      </div>
-
-      <!-- Placeholder for a imgage container-->
-      <div class="hero-placeholder">
-        <p>this is a placeholder for an imgage</p>
-      </div>
-    </div>
-  </div>
-
-  <!-- Section 2-->
-  <div class="section-2">
-    <!-- Title section -->
-    <h1 class="information-header-text">
-      Some random information.
-    </h1>
-
-    <!-- Cards flex container-->
-    <div class="cards-container">
-      <!-- Cards items -->
-      <div class="card-item">
-        <div class="square-card"></div>
-        <div class="card-text">this is some subtext under an illustration or image</div>
-      </div>
-      <div class="card-item">
-        <div class="square-card"></div>
-        <div class="card-text">this is some subtext under an illustration or image</div>
-      </div>
-      <div class="card-item">
-        <div class="square-card"></div>
-        <div class="card-text">this is some subtext under an illustration or image</div>
-      </div>
-      <div class="card-item">
-        <div class="square-card"></div>
-        <div class="card-text">this is some subtext under an illustration or image</div>
+        <!-- Placeholder for a imgage container-->
+        <div class="hero-placeholder">
+          <p>this is a placeholder for an imgage</p>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- Section 3-->
-  <div class="section-3">
-    <div class="quote-container">
-    <!-- Quote text -->
-      <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. &nbsp;Maybe it's just filling up the space, or maybe people will actually read it. Who knows? All I know <br>is that it looks nice.</div>
-      <div class="quote-author">- Thor, God of Thunder</div>
+    <!-- Section 2-->
+    <div class="section-2">
+      <!-- Title section -->
+      <h1 class="information-header-text">Some random information.</h1>
+
+      <!-- Cards flex container-->
+      <div class="cards-container">
+        <!-- Cards items -->
+        <div class="card-item">
+          <div class="square-card"></div>
+          <div class="card-text">
+            this is some subtext under an illustration or image
+          </div>
+        </div>
+        <div class="card-item">
+          <div class="square-card"></div>
+          <div class="card-text">
+            this is some subtext under an illustration or image
+          </div>
+        </div>
+        <div class="card-item">
+          <div class="square-card"></div>
+          <div class="card-text">
+            this is some subtext under an illustration or image
+          </div>
+        </div>
+        <div class="card-item">
+          <div class="square-card"></div>
+          <div class="card-text">
+            this is some subtext under an illustration or image
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
 
-  <!-- Section 4 -->
-  <div class="section-4">
+    <!-- Section 3-->
+    <div class="section-3">
+      <div class="quote-container">
+        <!-- Quote text -->
+        <div class="quote-text">
+          This is an inspiring quote, or a testimonial from a customer.
+          &nbsp;Maybe it's just filling up the space, or maybe people will
+          actually read it. Who knows? &nbsp;All I know <br />is that it looks
+          nice.
+        </div>
+        <div class="quote-author">- Thor, God of Thunder</div> <!-- Quote author -->
+      </div>
+    </div>
 
-  </div>
+    <!-- Section 4 -->
+    <div class="section-4">
+      <div class="call-to-action-container">
+        <div class="call-to-action-text-container">
+          <div class="call-to-action-title">Call to action! It's time!</div>
+          <div class="call-to-action-text">
+            Sign up for our product by clickng that button right over there!
+          </div>
+        </div>
+        <div class="call-to-action-button-container">
+          <button class="call-to-action button">Sign up</button> <!-- Second 'Sign up' button -->
+        </div>
+      </div>
+    </div>
 
-  <!-- Footer -->
-  <footer>
-    <!-- Copyright © The Odin Project 2021 -->
-  </footer>
-</body>
+    <!-- Footer -->
+    <footer>Copyright &nbsp;©&nbsp; The Odin Project 2021</footer>
+  </body>
 </html>
