Final version 4.1 with implemented media queries for mobile view

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <!-- Placeholder for a imgage container-->
         <div class="hero-placeholder">
-          <p>this is a placeholder for an imgage</p>
+          <p>this is a placeholder for an image</p>
         </div>
       </div>
     </div>
@@ -88,7 +88,7 @@
         <div class="quote-text">
           This is an inspiring quote, or a testimonial from a customer.
           &nbsp;Maybe it's just filling up the space, or maybe people will
-          actually read it. Who knows? &nbsp;All I know <br />is that it looks
+          actually read it. Who knows? &nbsp;All I know <br>is that it looks
           nice.
         </div>
         <div class="quote-author">- Thor, God of Thunder</div> <!-- Quote author -->
@@ -101,7 +101,7 @@
         <div class="call-to-action-text-container">
           <div class="call-to-action-title">Call to action! It's time!</div>
           <div class="call-to-action-text">
-            Sign up for our product by clickng that button right over there!
+            Sign up for our product by clicking that button right over there!
           </div>
         </div>
         <div class="call-to-action-button-container">
